--- a/src/main/res/layout/activity_set_card.xml
+++ b/src/main/res/layout/activity_set_card.xml
@@ -9,7 +9,7 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="10sp"
         android:stretchColumns="1"
         android:shrinkColumns="1"
