--- a/src/main/res/layout/activity_set_card.xml
+++ b/src/main/res/layout/activity_set_card.xml
@@ -4,163 +4,325 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="none"
-    android:layout_weight="1">
+    android:layout_weight="1"
+    android:scrollbars="none">
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10sp"
-        android:stretchColumns="1"
+        android:padding="10dp"
         android:shrinkColumns="1"
+        android:stretchColumns="1"
         tools:context=".SetCardActivity">
 
         <TableRow
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#fffaff94"
-                android:padding="5sp"
-                android:text="Paste the magstripe data from your Visa card below. In the US, magstripe readers can be purchased for around $20 from Amazon or Ebay. The inexpensive readers work as USB input devices and require no extra drivers on Windows or Mac PCs."
                 android:layout_span="2"
+                android:background="@color/magstripeHelp"
+                android:padding="5dp"
+                android:text="Paste the magstripe data from your Visa card below. In the US, magstripe readers can be purchased for around $20 from Amazon or Ebay. The inexpensive readers work as USB input devices and require no extra drivers on Windows or Mac PCs."
                 android:textStyle="bold" />
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/swipe_data"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
                 android:layout_span="2"
+                android:inputType="textMultiLine"
                 android:lines="5" />
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <Button
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Replace Card"
-                android:gravity="center"
                 android:layout_span="2"
-                android:onClick="setNewCard" />
+                android:gravity="center"
+                android:onClick="setNewCard"
+                android:text="Replace Card" />
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#ff00feff"
-            android:layout_marginTop="10sp">
+            android:layout_marginTop="10dp"
+            android:background="@color/cardDataDarker"
+            android:paddingBottom="5dp">
 
             <TextView
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Current Card Data"
-                android:layout_span="2"
                 android:layout_gravity="center_horizontal"
-                android:textStyle="bold"
-                android:padding="5sp"
-                android:textSize="18sp" />
+                android:layout_span="2"
+                android:padding="5dp"
+                android:text="Current Card Data"
+                android:textSize="18sp"
+                android:textStyle="bold" />
         </TableRow>
 
         <TableRow
             android:id="@+id/using_default_card_warning"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#ff00feff">
+            android:background="@color/cardDataDarker">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Warning: This is a preconfigured Visa debit card with zero balance. Set your own Visa magstripe data above for live payments."
-                android:background="#ffffb0cb"
-                android:layout_marginBottom="5sp"
-                android:layout_marginLeft="20sp"
-                android:paddingLeft="5sp"
-                android:paddingRight="5sp"
-                android:layout_marginRight="20sp"
-                android:layout_span="2" />
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_span="2"
+                android:background="@color/defaultMagWarning"
+                android:paddingBottom="5dp"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:text="Warning: This is a preconfigured Visa debit card with zero balance. Set your own Visa magstripe data above for live payments." />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#ff00feff">
+            android:background="@color/cardDataLighter">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Swipe Data: "
+                android:paddingStart="3dp"
+                android:paddingEnd="3dp"
+                android:text="Swipe Data:"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/current_swipe_data"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textIsSelectable="true"
-                android:text="@string/unset_value" />
+                android:paddingStart="3dp"
+                android:paddingEnd="3dp"
+                android:text="@string/unset_value"
+                android:textIsSelectable="true" />
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#ff00feff">
+            android:background="@color/cardDataDarker"
+            android:id="@+id/optional_name_view">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name: "
+                android:paddingStart="3dp"
+                android:paddingEnd="3dp"
+                android:text="Name:"
                 android:textStyle="bold" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/name_on_card"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="3dp"
+                android:paddingEnd="3dp"
                 android:text="@string/unset_value" />
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#ff00feff">
+            android:background="@color/cardDataLighter">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Card Number: "
+                android:paddingStart="3dp"
+                android:paddingEnd="3dp"
+                android:text="Card Number:"
                 android:textStyle="bold" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/card_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="3dp"
+                android:paddingEnd="3dp"
                 android:text="@string/unset_value" />
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#ff8dfdff">
+            android:background="@color/cardDataDarker">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Expiration: "
+                android:paddingStart="3dp"
+                android:paddingEnd="3dp"
+                android:text="Card Brand:"
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/card_brand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingStart="3dp"
+                android:paddingEnd="3dp"
+                android:text="@string/unset_value" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/cardDataLighter">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="3dp"
+                android:paddingEnd="3dp"
+                android:text="Expiration:"
+                android:textStyle="bold" />
+
+            <TextView
                 android:id="@+id/card_expiration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="3dp"
+                android:paddingEnd="3dp"
+                android:text="@string/unset_value" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/cardDataDarker">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="3dp"
+                android:paddingEnd="3dp"
+                android:text="Service Code:"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/service_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="3dp"
+                android:paddingEnd="3dp"
+                android:text="@string/unset_value" />
+        </TableRow>
+
+
+        <TableLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_span="2">
+
+            <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/cardDataDarker">
+
+                <TextView
+                    android:id="@+id/service_code1_val"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="6dp"
+                    android:paddingEnd="3dp"
+                    android:text="@string/unset_value" />
+
+                <TextView
+                    android:id="@+id/service_code1_descr"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingStart="3dp"
+                    android:paddingEnd="3dp"
+                    android:text="@string/unset_value" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/cardDataDarker">
+
+                <TextView
+                    android:id="@+id/service_code2_val"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="6dp"
+                    android:paddingEnd="3dp"
+                    android:text="@string/unset_value" />
+
+                <TextView
+                    android:id="@+id/service_code2_descr"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingStart="3dp"
+                    android:paddingEnd="3dp"
+                    android:text="@string/unset_value" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/cardDataDarker">
+
+                <TextView
+                    android:id="@+id/service_code3_val"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="6dp"
+                    android:paddingEnd="3dp"
+                    android:text="@string/unset_value" />
+
+                <TextView
+                    android:id="@+id/service_code3_descr"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingStart="3dp"
+                    android:paddingEnd="3dp"
+                    android:text="@string/unset_value" />
+            </TableRow>
+
+        </TableLayout>
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/cardDataLighter">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="3dp"
+                android:paddingEnd="3dp"
+                android:text="Discretionary Data:"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/discretionary_data"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="3dp"
+                android:paddingEnd="3dp"
                 android:text="@string/unset_value" />
         </TableRow>
 
